# chess_ai

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  CMakePresets.bak.json  CMakeSettings.json  README.md
assets/: README.md
include/: Board.h  ChessEngine.h  GUI.h  InputHandler.h  Move.h  Piece.h
src/: Board.cpp  ChessEngine.cpp  EvaluationTesting.cpp  GUI.cpp  InputHandler.cpp  Move.cpp  MoveGenerationTesting.cpp  Piece.cpp  main.cpp  uci_main.cpp
testbed/: README.md  history.js  history.json  openings.txt  results_viewer.html  run_match.py
testbed/baselines/: README.md
